# AetherAI

./: README.md  config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
Data/Embedding/attention-is-all-you-need-Paper/: index.faiss  index.pkl
app/: main.py
app/database/: mongo_client.py
app/models/: schemas.py
app/services/: auth_service.py  file_service.py
backend/: .env.example  Dockerfile  config.json  pyproject.toml  requirements.txt
backend/app/models/: schemas.py
backend/app/services/: auth_service.py
backend/scripts/: AgentGraph.py  PdfProcessingGraph.py  RAGGraph.py  config.py
backend/scripts/helper/: logConfig.py  vectorDB.py
frontend/: package-lock.json  package.json
frontend-AetherAI/: package.json
frontend-AetherAI/src/: index.css
frontend-AetherAI/src/components/: ChatComponent.jsx  Sidebar.jsx
frontend-mineai/: package-lock.json  package.json
frontend-mineai/src/: App.css  App.jsx  index.css
frontend-mineai/src/components/: AuthSection.jsx  ChatComponent.jsx  FileUploadPanel.jsx  LoginButton.jsx  Sidebar.jsx  UserContext.jsx
frontend/src/: App.css  App.jsx
frontend/src/components/: GoogleIcon.jsx
scripts/: AgentGraph.py  History.py  Initialize.py  MemoryManager.py  PdfProcessingGraph.py  QueryModule.py  QueryProcessingGraph.py  QueryProcessor.py  RAGChatGraph.py  RAGGraph.py  Retrival.py  VectorStore.py  main.py
scripts/helper/: vectorDB.py
