[project]
name = "mineai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.23",
    "langchain-core>=0.3.59",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langchain-pinecone>=0.2.6",
    "langgraph>=0.4.3",
    "pinecone>=6.0.2",
    "pypdf>=5.4.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=4.1.0",
    "uvicorn>=0.34.2",
]
